--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=restCloudVendor
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate-configuration to create table automatically
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create 
+#spring.jpa.show-sql=true
+
+jpa.properties.hibernate.dialect =  org.hibernate.dialect.MySQL5InnoDBDialect
