--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=restCloudVendor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+logging.level.org.springframework=debug
 #hibernate-configuration to create table automatically
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
